--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [沙特“未来新城”争取中国资金](/articles/voa/1016229.md)
+
 4-21 [南中国海情势紧张之际 中国举办西太平洋海军论坛，29国代表参加](/articles/voa/1016230.md)
 
 4-21 [台湾感谢美众院通过援助议案 称其展示了美对台“坚若磐石”的支持](/articles/voa/1016231.md)
@@ -598,6 +600,4 @@
 4-10 [人权组织呼吁穆斯林妇女抵制中国快时尚电商希音](/articles/voa/1016527.md)
 
 4-10 [梵蒂冈外长开始对越南进行6天的访问，以实现关系正常化](/articles/voa/1016528.md)
-
-4-10 [“大学自由论坛”开幕，聚焦亚太地区民主人权活动](/articles/voa/1016529.md)
 
